# ebay_comparisor

./: pyproject.toml
src/: main.py
src/scraper/: ebay.py  spider.py
