[tool.poetry]
name = "ebay-comparisor"
version = "0.1.0"
description = "Ebay Product Compariser"
authors = ["Feri Lukmansyah <47948861+perymerdeka@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.25.2"
beautifulsoup4 = "^4.12.2"
pandas = "^2.1.3"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
